unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/Perfil_Tercero_Fisico__c.object-meta.xml
<CustomObject>
    <label>Perfil Tercero Persona Física Tercero</label>
    <nameField>
        <label>Folio Tercero Física</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perfil Tercero Persona Física</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>