unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Actividad_Profesi_n_Ocupaci_n__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Profesi_n_Ocupaci_n__c</fullName>
    <label>Actividad/Profesión/Ocupación Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8240100	ADMINISTRACION - ASISTENTES ADMINISTRATIVOS</fullName>
            </value>
            <value>
                <fullName>8220400	ADMINISTRACION - CAPTURISTA Y OPERADORES DE TELEFONO</fullName>
            </value>
            <value>
                <fullName>8250100	ADMINISTRACION - CONSULTORES</fullName>
            </value>
            <value>
                <fullName>8240200	ADMINISTRACION - CONTADORES Y AUDITORES</fullName>
            </value>
            <value>
                <fullName>8230300	ADMINISTRACION - DIRECTORES, GERENTES  Y EMPLEADOS DE COMPRAS, FINANZAS, RECURSOS HUMANOS Y SERVICIOS ADMINISTRATIVOS</fullName>
            </value>
            <value>
                <fullName>8250800	ADMINISTRACION - DIRECTORES, GERENTES Y EMPELADOS ADMINISTRATIVOS</fullName>
            </value>
            <value>
                <fullName>8250200	ADMINISTRACION - DIRECTORES, GERENTES Y EMPLEADOS DE COMERCIALIZACION</fullName>
            </value>
            <value>
                <fullName>8240600	ADMINISTRACION - DIRECTORES, GERENTES Y EMPLEADOS DE PRODUCCION</fullName>
            </value>
            <value>
                <fullName>8240700	ADMINISTRACION - DIRECTORES, GERENTES Y EMPLEADOS DE SERVICIOS DE TRANSPORTE</fullName>
            </value>
            <value>
                <fullName>8220600	ADMINISTRACION - PAGADORES Y COBRADORES</fullName>
            </value>
            <value>
                <fullName>8210100	ADMINISTRACION - TRABAJADORES DE ARCHIVO, ALMACEN DE INVENTARIOS</fullName>
            </value>
            <value>
                <fullName>1110100	AGRICULTURA Y SILVICULTURA - ADMINISTRADORES O TRABAJADORES AGRICOLAS</fullName>
            </value>
            <value>
                <fullName>1110400	AGRICULTURA Y SILVICULTURA - ADMINISTRADORES O TRABAJADORES SILVICOLAS Y FORESTALES</fullName>
            </value>
            <value>
                <fullName>7230200	ALIMENTACION Y HOSPEDAJE - JEFES DE COCINA, RESTAURANTE Y/O BAR</fullName>
            </value>
            <value>
                <fullName>7210100	ALIMENTACION Y HOSPEDAJE - TRABAJADORES DE SERVICIO DE ALIMENTOS Y BEBIDAS</fullName>
            </value>
            <value>
                <fullName>7240200	ALIMENTACION Y HOSPEDAJE - TRABAJADORES DE SERVICIOS DE ALOJAMIENTO</fullName>
            </value>
            <value>
                <fullName>5310700	ALIMENTOS Y BEBIDAS - TRABAJADORES EN LA ELABORACION  Y PROCESAMIENTO DE ALIMENTOS, BEBIDAS Y TABACO</fullName>
            </value>
            <value>
                <fullName>8140100	BOLSA, BANCA Y SEGUROS - AGENTES DE VALORES, PROMOTORES Y CORREDORES DE INVERSION</fullName>
            </value>
            <value>
                <fullName>8120100	BOLSA, BANCA Y SEGUROS - GERENTES O TRABAJADORES DE SERVICIOS Y PRODUCTOS FINANCIEROS</fullName>
            </value>
            <value>
                <fullName>8130500	BOLSA, BANCA Y SEGUROS - VALUADORES</fullName>
            </value>
            <value>
                <fullName>7120100	COMERCIO - CAJEROS REGISTRADORES</fullName>
            </value>
            <value>
                <fullName>7110200	COMERCIO - DESPACHADORES DE GASOLINERA</fullName>
            </value>
            <value>
                <fullName>7110300	COMERCIO - EMPACADORES DE MERCANCIAS</fullName>
            </value>
            <value>
                <fullName>7140200	COMERCIO - GERENTES O EMPLEADOS DE VENTAS</fullName>
            </value>
            <value>
                <fullName>7140100	COMERCIO - GERENTES O SUPERVISOR DE ESTABLECIMIENTO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>7130200	COMERCIO - REPRESENTANTES DE VENTAS POR TELEFONO O POR TELEVISION</fullName>
            </value>
            <value>
                <fullName>7110500	COMERCIO - TAQUILLEROS</fullName>
            </value>
            <value>
                <fullName>7110600	COMERCIO - VENDEDORES AMBULANTES</fullName>
            </value>
            <value>
                <fullName>7130400	COMERCIO - VENDEDORES ESPECIALIZADOS</fullName>
            </value>
            <value>
                <fullName>3130300	CONSTRUCCION -  INGENIEROS, TECNICOS Y OPERADORES DE LA CONSTRUCCION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>