unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Apellido_Paterno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno__c</fullName>
    <label>Apellido Paterno Tercero</label>
    <length>30</length>
    <type>Text</type>
</CustomField>