unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Autoridad_Emite_Identificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Autoridad_Emite_Identificaci_n__c</fullName>
    <label>Autoridad Emite Identificación Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Identificacion__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Instituto Nacional Electoral</fullName>
                <label>INSTITUTO NACIONAL ELECTORAL</label>
            </value>
            <value>
                <fullName>Pasaportes</fullName>
            </value>
            <value>
                <fullName>Relaciones Exteriores</fullName>
            </value>
            <value>
                <fullName>Secretaría de Educación Pública</fullName>
            </value>
            <value>
                <fullName>Instituto Nacional de Migración</fullName>
            </value>
            <value>
                <fullName>Otro (Extranjeros)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>