unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Check_Direccion_Principal__c.field-meta.xml
<CustomField>
    <fullName>Check_Direccion_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Dirección Principal Tercero</label>
    <type>Checkbox</type>
</CustomField>