unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Check_List_Sub_Tipo_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Sub_Tipo_Fiscal__c</fullName>
    <label>Check List Tercero</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copia de su Identificación Oficial (IFE o Pasaporte)</fullName>
            </value>
            <value>
                <fullName>Clave Única de Registro de Población</fullName>
            </value>
            <value>
                <fullName>R1: Alta en SHCP</fullName>
            </value>
            <value>
                <fullName>Recibos de Nómina de los últimos 3 meses</fullName>
            </value>
            <value>
                <fullName>Comprobante de Domicilio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>