unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad Tercero</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipName>Perfiles_Terceros</relationshipName>
    <type>Lookup</type>
</CustomField>