unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Clave_del_Pais__c.field-meta.xml
<CustomField>
    <fullName>Clave_del_Pais__c</fullName>
    <formula>TEXT(Pais__r.CodigoPais__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave del País Tercero</label>
    <type>Text</type>
</CustomField>