unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Postal Tercero</label>
    <referenceTo>Codigo_Postal__c</referenceTo>
    <relationshipName>Perfiles_Terceros</relationshipName>
    <type>Lookup</type>
</CustomField>