unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia Tercero</label>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipName>Perfiles_Terceros1</relationshipName>
    <type>Lookup</type>
</CustomField>