unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <label>Correo electrónico Tercero</label>
    <type>Email</type>
</CustomField>