unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/CURP__c.field-meta.xml
<CustomField>
    <fullName>CURP__c</fullName>
    <label>CURP Tercero</label>
    <length>18</length>
    <type>Text</type>
</CustomField>