unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Tercero</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Perfiles_Terceros</relationshipName>
    <type>Lookup</type>
</CustomField>