unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Dictaminacion_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dictaminación Tercero</label>
    <referenceTo>Dictaminacion__c</referenceTo>
    <relationshipName>Perfil_Tercero_Persona_F_sica</relationshipName>
    <type>Lookup</type>
</CustomField>