unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Domicilio_del_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_del_Trabajo__c</fullName>
    <label>Domicilio del Trabajo Tercero</label>
    <length>150</length>
    <type>Text</type>
</CustomField>