unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>(TODAY () - Fecha_de_Nacimiento__c)/365</formula>
    <label>Edad Tercero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>