unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado Tercero</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipName>Perfiles_Terceros</relationshipName>
    <type>Lookup</type>
</CustomField>