unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Evalua_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Evalua_Monitor__c</fullName>
    <formula>IF(NOT(Check_Direccion_Principal__c) &amp;&amp; NOT(Check_Direcci_n_Laboral__c), &quot;1&quot;,
IF(Check_Direccion_Principal__c &amp;&amp; NOT(Check_Direcci_n_Laboral__c), &quot;2&quot;,
IF(NOT(Check_Direccion_Principal__c) &amp;&amp; Check_Direcci_n_Laboral__c, &quot;3&quot;,
IF(Check_Direccion_Principal__c &amp;&amp; Check_Direcci_n_Laboral__c, &quot;4&quot;,
&quot;1&quot;)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evalua Monitor Tercero</label>
    <type>Text</type>
</CustomField>