unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Fecha_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Nacimiento__c</fullName>
    <label>Fecha de Nacimiento Tercero</label>
    <type>Date</type>
</CustomField>