unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Folio_Tercero_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Folio_Tercero_Fisica__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Folio Tercero Física</label>
    <type>AutoNumber</type>
</CustomField>