unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/MunicipioTercero__c.field-meta.xml
<CustomField>
    <fullName>MunicipioTercero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio Tercero</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Perfil Tercero Persona Física (Municipio)</relationshipLabel>
    <relationshipName>Perfiles_Terceros1</relationshipName>
    <type>Lookup</type>
</CustomField>