unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/No_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>No_Identificacion__c</fullName>
    <label>No. Identificación Tercero</label>
    <length>30</length>
    <type>Text</type>
</CustomField>