unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre Tercero</label>
    <length>30</length>
    <type>Text</type>
</CustomField>