unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Nombre_Completo_Tercero_Persona_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo_Tercero_Persona_Fisica__c</fullName>
    <formula>Nombre__c &amp; &quot; &quot; &amp; Apellido_Paterno__c  &amp; &quot; &quot; &amp;  Apellido_Materno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Completo Tercero Persona Física</label>
    <type>Text</type>
</CustomField>