unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Nombre_de_la_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_Empresa__c</fullName>
    <label>Nombre de la Empresa Tercero</label>
    <length>100</length>
    <type>Text</type>
</CustomField>