unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Nombre_del_Cleinte__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Cleinte__c</fullName>
    <formula>Dictaminacion_Lookup__r.Nombre_Completo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Cleinte Tercero</label>
    <type>Text</type>
</CustomField>