unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Numero_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Numero_Exterior__c</fullName>
    <label>Número Exterior Tercero</label>
    <length>10</length>
    <type>Text</type>
</CustomField>