unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Numero_Interior__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interior__c</fullName>
    <label>Número Interior Tercero</label>
    <length>10</length>
    <type>Text</type>
</CustomField>