unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País Tercero</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Perfil Tercero Persona Física (País)</relationshipLabel>
    <relationshipName>Perfiles_Terceros2</relationshipName>
    <type>Lookup</type>
</CustomField>