unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Pais_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacimiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Nacimiento Tercero</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Perfil Tercero Persona Física (País de Nacimiento)</relationshipLabel>
    <relationshipName>Perfiles_Terceros</relationshipName>
    <type>Lookup</type>
</CustomField>