unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Pais_de_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacionalidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Nacionalidad Tercero</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Perfil Tercero Persona Física (País de Nacionalidad)</relationshipLabel>
    <relationshipName>Perfiles_Terceros1</relationshipName>
    <type>Lookup</type>
</CustomField>