unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/PaisTercero__c.field-meta.xml
<CustomField>
    <fullName>PaisTercero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País Tercero</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipName>Perfiles_Terceros3</relationshipName>
    <type>Lookup</type>
</CustomField>