unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Regimen_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Regimen_Fiscal__c</fullName>
    <label>Régimen Fiscal Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>605	Sueldos y Salarios e Ingresos Asimilados a Salarios</fullName>
            </value>
            <value>
                <fullName>606	Arrendamiento</fullName>
            </value>
            <value>
                <fullName>607	Régimen de Enajenación o Adquisición de Bienes</fullName>
            </value>
            <value>
                <fullName>608	Demás ingresos</fullName>
            </value>
            <value>
                <fullName>610	Residentes en el Extranjero sin Establecimiento Permanente en México</fullName>
            </value>
            <value>
                <fullName>611	Ingresos por Dividendos (socios y accionistas)</fullName>
            </value>
            <value>
                <fullName>612	Personas Físicas con Actividades Empresariales y Profesionales</fullName>
            </value>
            <value>
                <fullName>614	Ingresos por intereses</fullName>
            </value>
            <value>
                <fullName>615	Régimen de los ingresos por obtención de premios</fullName>
            </value>
            <value>
                <fullName>616	Sin obligaciones fiscales</fullName>
            </value>
            <value>
                <fullName>621	Incorporación Fiscal</fullName>
            </value>
            <value>
                <fullName>625	Régimen de las Actividades Empresariales con ingresos a través de Plataformas Tecnológicas</fullName>
            </value>
            <value>
                <fullName>626_Régimen Simplificado de Confianza</fullName>
                <label>626 Régimen Simplificado de Confianza</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>