unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Registro_completo__c.field-meta.xml
<CustomField>
    <fullName>Registro_completo__c</fullName>
    <formula>IF( Check_Direccion_Principal__c &amp;&amp;  Check_Direcci_n_Laboral__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registro completo Tercero</label>
    <type>Checkbox</type>
</CustomField>