unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <label>RFC Tercero</label>
    <length>13</length>
    <type>Text</type>
</CustomField>