unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/RFC_Empresa__c.field-meta.xml
<CustomField>
    <fullName>RFC_Empresa__c</fullName>
    <label>RFC Empresa Tercero</label>
    <length>13</length>
    <type>Text</type>
</CustomField>