unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Sexo__c.field-meta.xml
<CustomField>
    <fullName>Sexo__c</fullName>
    <label>Sexo Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sexo</valueSetName>
    </valueSet>
</CustomField>