unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Telefono_Celular__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Celular__c</fullName>
    <label>Teléfono Celular Tercero</label>
    <length>20</length>
    <type>Text</type>
</CustomField>