unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Telefono_Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Domicilio__c</fullName>
    <label>Teléfono Domicilio Tercero</label>
    <length>20</length>
    <type>Text</type>
</CustomField>