unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/fields/Tercero_Persona_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Tercero_Persona_Fisica__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Perfil_Tercero_Fisico__c/&quot; &amp; Id &amp; &quot;/view&quot;, Name &amp; &quot; - &quot; &amp; Nombre__c &amp; &quot; &quot; &amp; Apellido_Paterno__c &amp; &quot; &quot; &amp; Apellido_Materno__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tercero Persona Física Tercero</label>
    <type>Text</type>
</CustomField>