unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/recordTypes/Perfil_Tercero_2_Persona_Fisica.recordType-meta.xml
<RecordType>
    <fullName>Perfil_Tercero_2_Persona_Fisica</fullName>
    <active>true</active>
    <label>Perfil Tercero 2 Persona Física</label>
</RecordType>