unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Campos_Alfanumericos.validationRule-meta.xml
<ValidationRule>
    <fullName>Campos_Alfanumericos</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( RFC__c ,&quot;^[a-z A-Z 0-9]*$&quot;))||

NOT(REGEX( RFC_Empresa__c ,&quot;^[a-z A-Z 0-9]*$&quot;))||

NOT(REGEX( CURP__c ,&quot;^[a-z A-Z 0-9]*$&quot;))</errorConditionFormula>
    <errorMessage>Por Favor Ingresar Unicamente Numeros y Letras en los campos de &quot;RFC&quot; y/o &quot;CURP&quot;</errorMessage>
</ValidationRule>