unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Campos_Numericos.validationRule-meta.xml
<ValidationRule>
    <fullName>Campos_Numericos</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Extension__c ,&quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Extension__c</errorDisplayField>
    <errorMessage>Por Favor solo Ingresar Numeros</errorMessage>
</ValidationRule>