unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Codigo_postal_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Codigo_postal_obligatorio</fullName>
    <active>false</active>
    <description>Si ¿Es usted el titular de recursos? = NO, será obligatorio llenar el campo.</description>
    <errorConditionFormula>AND
(
Es_usted_el_titular_de_recursos__c == &quot;NO&quot;,
OR(
ISNULL(Codigo_Postal__c),
ISBLANK(Codigo_Postal__c)
)
)</errorConditionFormula>
    <errorDisplayField>Codigo_Postal__c</errorDisplayField>
    <errorMessage>Si ¿Es usted el titular de recursos? = NO, será obligatorio llenar el campo.</errorMessage>
</ValidationRule>