unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Colonia_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Colonia_obligatorio</fullName>
    <active>false</active>
    <description>Si ¿Es usted el titular de recursos? = NO, será obligatorio llenar el campo.</description>
    <errorConditionFormula>AND
(
Es_usted_el_titular_de_recursos__c == &quot;NO&quot;,
OR(
ISNULL(Colonia__c),
ISBLANK(Colonia__c)
)
)</errorConditionFormula>
    <errorMessage>Si ¿Es usted el titular de recursos? = NO, será obligatorio llenar el campo.</errorMessage>
</ValidationRule>