unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Correo_electronico_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Correo_electronico_obligatorio</fullName>
    <active>false</active>
    <description>Si ¿Es usted el titular de recursos? = NO, será obligatorio el campo correo electrónico.</description>
    <errorConditionFormula>AND
(
Es_usted_el_titular_de_recursos__c == &quot;NO&quot;,
OR(
ISNULL(Correo_electronico__c),
ISBLANK(Correo_electronico__c)
)
)</errorConditionFormula>
    <errorDisplayField>Correo_electronico__c</errorDisplayField>
    <errorMessage>El campo ¿Es usted el titular de recursos? = NO por lo que el campo correo electrónico debe llenarse.</errorMessage>
</ValidationRule>