unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Domicilio_del_trabajo_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicilio_del_trabajo_obligatorio</fullName>
    <active>false</active>
    <description>Si ¿Es usted el titular de recursos? = NO, será obligatorio llenar el campo.</description>
    <errorConditionFormula>AND
(
Es_usted_el_titular_de_recursos__c == &quot;NO&quot;,
OR(
ISNULL(Domicilio_del_Trabajo__c),
ISBLANK(Domicilio_del_Trabajo__c)
)
)</errorConditionFormula>
    <errorDisplayField>Domicilio_del_Trabajo__c</errorDisplayField>
    <errorMessage>Si ¿Es usted el titular de recursos? = NO, será obligatorio llenar el campo.</errorMessage>
</ValidationRule>