unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Estado_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Estado_obligatorio</fullName>
    <active>false</active>
    <description>Si ¿Es usted el titular de recursos? = NO, será obligatorio llenar el campo.</description>
    <errorConditionFormula>AND
(
Es_usted_el_titular_de_recursos__c == &quot;NO&quot;,
OR(
ISNULL(Estado__c),
ISBLANK(Estado__c)
)
)</errorConditionFormula>
    <errorDisplayField>Estado__c</errorDisplayField>
    <errorMessage>Si ¿Es usted el titular de recursos? = NO, será obligatorio llenar el campo.</errorMessage>
</ValidationRule>