unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Extension_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Extension_obligatorio</fullName>
    <active>false</active>
    <description>Si ¿Es usted el titular de recursos? = NO, será obligatorio el campo extensión.</description>
    <errorConditionFormula>AND
(
Es_usted_el_titular_de_recursos__c == &quot;NO&quot;,
OR(
ISNULL(Extension__c),
ISBLANK(Extension__c)
)
)</errorConditionFormula>
    <errorDisplayField>Extension__c</errorDisplayField>
    <errorMessage>El campo ¿Es usted el titular de recursos? = NO por lo que el campo extensión debe llenarse.</errorMessage>
</ValidationRule>