unpackaged/main/default/objects/Perfil_Tercero_Fisico__c/validationRules/Fecha_de_nacimiento_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_nacimiento_obligatorio</fullName>
    <active>false</active>
    <description>Si ¿Es usted el titular de recursos? = NO, será obligatorio el campo fecha de nacimiento.</description>
    <errorConditionFormula>AND
(
Es_usted_el_titular_de_recursos__c == &quot;NO&quot;,
OR(
ISNULL(Fecha_de_Nacimiento__c),
ISBLANK(Fecha_de_Nacimiento__c)
)
)</errorConditionFormula>
    <errorDisplayField>Fecha_de_Nacimiento__c</errorDisplayField>
    <errorMessage>El campo ¿Es usted el titular de recursos? = NO por lo que el campo fecha de nacimiento debe llenarse.</errorMessage>
</ValidationRule>